apps/nexus/overlays/ops-old/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nexus
  namespace: nexus
spec:
  hosts:
    - "nexus.devxp-tech.io"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 8081
            host: nexus-repository-manager.nexus.svc.lgsk8sp1.grupologos.local
